@@ -4,11 +4,9 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 import com.Heart2Hub.Heart2Hub_Backend.entity.*;
+import com.Heart2Hub.Heart2Hub_Backend.enumeration.ItemTypeEnum;
 import com.Heart2Hub.Heart2Hub_Backend.enumeration.StaffRoleEnum;
-import com.Heart2Hub.Heart2Hub_Backend.exception.DepartmentNotFoundException;
-import com.Heart2Hub.Heart2Hub_Backend.exception.SubDepartmentNotFoundException;
-import com.Heart2Hub.Heart2Hub_Backend.exception.UnableToCreateWardException;
-import com.Heart2Hub.Heart2Hub_Backend.exception.UnableToCreateDepartmentException;
+import com.Heart2Hub.Heart2Hub_Backend.exception.*;
 import com.Heart2Hub.Heart2Hub_Backend.repository.StaffRepository;
 import com.Heart2Hub.Heart2Hub_Backend.repository.WardClassRepository;
 import com.Heart2Hub.Heart2Hub_Backend.repository.WardRepository;
@@ -75,13 +73,35 @@ class WardServiceTests {
     }
 
     @Test
-    void testIsLoggedInUserAdmin_NotAdmin() {
+    void testIsLoggedInUserAdmin_RoleFailure() {
         // Mocking (Authentication)
+        UsernamePasswordAuthenticationToken authentication = mock(UsernamePasswordAuthenticationToken.class);
+        User user = new User("doctorCardiology1", "password", Collections.emptyList());
+        when(authentication.getPrincipal())
+                .thenReturn(user);
+        Optional<Staff> toReturn = Optional.of(new Staff("doctorCardiology1", "password", "Ernest", "Chan", 97882145L, StaffRoleEnum.DOCTOR, true));
+        when(staffRepository.findByUsername("doctorCardiology1"))
+                .thenReturn(toReturn);
+        SecurityContext securityContext = Mockito.mock(SecurityContext.class);
+        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+        // Test
+        assertFalse(wardService.isLoggedInUserAdmin());
+
+        // Verify
+        verify(authentication, times(1)).getPrincipal();
+        verify(staffRepository, times(1)).findByUsername("doctorCardiology1");
+    }
+
+    @Test
+    void testCreateWard() throws UnableToCreateWardException {
+        // Mocking the logged-in user as an admin
         UsernamePasswordAuthenticationToken authentication = mock(UsernamePasswordAuthenticationToken.class);
         User user = new User("staff1", "password1", Collections.emptyList());
         when(authentication.getPrincipal())
                 .thenReturn(user);
-        Optional<Staff> toReturn = Optional.of(new Staff("staff1", "password1", "Elgin", "Chan", 97882145L, StaffRoleEnum.DOCTOR, true));
+        Optional<Staff> toReturn = Optional.of(new Staff("staff1", "password1", "Elgin", "Chan", 97882145L, StaffRoleEnum.ADMIN, true));
         when(staffRepository.findByUsername("staff1"))
                 .thenReturn(toReturn);
         SecurityContext securityContext = Mockito.mock(SecurityContext.class);
@@ -89,80 +109,189 @@ class WardServiceTests {
         SecurityContextHolder.setContext(securityContext);
         SecurityContextHolder.getContext().setAuthentication(authentication);
 
-        // Test
-        assertFalse(wardService.isLoggedInUserAdmin());
-
-        // Verify
-        verify(authentication, times(1)).getPrincipal();
-        verify(staffRepository, times(1)).findByUsername("staff1");
-    }
-
-    @Test
-    void testCreateWard() throws UnableToCreateWardException {
-        Ward newWard = new Ward();
-        String wardClassName = "A";
-
-        // Mocking the logged-in user as an admin
-        Staff staff = new Staff();
-        staff.setStaffRoleEnum(StaffRoleEnum.ADMIN);
-        when(staffRepository.findByUsername(anyString())).thenReturn(Optional.of(staff));
-
         // Mocking the ward class repository to return a valid WardClass
+        Ward newWard = new Ward();
+        String wardClassName = "Ward 1A";
+        newWard.setName(wardClassName);
+        newWard.setLocation("Level 2");
+        newWard.setCapacity(24);
         WardClass wardClass = new WardClass();
-        wardClass.setWardClassName("A");
+        wardClass.setWardClassName("Ward 1A");
+        wardClass.setBedsPerRoom(10);
         when(wardClassRepository.findByWardClassNameContainingIgnoreCase(wardClassName))
-                .thenReturn(List.of(wardClass));
-
-        // Mocking the ward repository to save the new ward
-        when(wardRepository.save(any())).thenReturn(newWard);
+                .thenReturn(Collections.singletonList(wardClass));
 
         // Performing the test
         Ward result = wardService.createWard(newWard, wardClassName);
 
         assertNotNull(result);
-        // Add additional assertions based on your implementation
+        assertEquals(newWard,result);
+        //verify
+        verify(wardRepository, times(1)).save(result);
+
+
     }
 
     @Test
-    void testCreateWard_StaffNotFound() {
+    void testCreateWard_NotAdmin() {
         // Mock data
+        UsernamePasswordAuthenticationToken authentication = mock(UsernamePasswordAuthenticationToken.class);
+        User user = new User("doctorCardiology1", "password", Collections.emptyList());
+        when(authentication.getPrincipal())
+                .thenReturn(user);
+        Optional<Staff> toReturn = Optional.of(new Staff("doctorCardiology1", "password", "Ernest", "Chan", 97882145L, StaffRoleEnum.DOCTOR, true));
+        when(staffRepository.findByUsername("doctorCardiology1"))
+                .thenReturn(toReturn);
+        SecurityContext securityContext = Mockito.mock(SecurityContext.class);
+        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+
+        // Mocking the ward class repository to return a valid WardClass
         Ward newWard = new Ward();
-        String wardClassName = "A";
-
-        // Mocking the logged-in user as a non-existent staff
-        when(staffRepository.findByUsername(anyString())).thenReturn(Optional.empty());
-
-        // Test
-        assertThrows(UnableToCreateWardException.class, () -> wardService.createWard(newWard, wardClassName));
-    }
-
-
-    @Test
-    void testCreateWardNonAdmin() {
-        Ward newWard = new Ward();
-        String wardClassName = "A";
-
-        // Mocking the logged-in user as a non-admin
-        when(staffRepository.findByUsername(anyString())).thenReturn(Optional.of(new Staff()));
-
-        // Performing the test
-        assertThrows(UnableToCreateWardException.class, () -> wardService.createWard(newWard, wardClassName));
-    }
-
-    @Test
-    void testCreateWardWardClassNotFound() {
-        Ward newWard = new Ward();
-        String wardClassName = "A";
-
-        // Mocking the logged-in user as an admin
-        when(staffRepository.findByUsername(anyString())).thenReturn(Optional.of(new Staff()));
-
-        // Mocking the ward class repository to return an empty list
+        String wardClassName = "Ward 1A";
+        newWard.setName(wardClassName);
+        newWard.setLocation("Level 2");
+        newWard.setCapacity(24);
+        WardClass wardClass = new WardClass();
+        wardClass.setWardClassName("Ward 1A");
+        wardClass.setBedsPerRoom(10);
         when(wardClassRepository.findByWardClassNameContainingIgnoreCase(wardClassName))
-                .thenReturn(new ArrayList<>());
+                .thenReturn(Collections.singletonList(wardClass));
+
+        // Performing the test
+        assertThrows(UnableToCreateWardException.class, () -> wardService.createWard(newWard,wardClassName));
+
+        //verify
+        verify(wardRepository, never()).save(newWard);
+    }
+
+    @Test
+    void testCreateWard_NullName() {
+        // Mock data
+        UsernamePasswordAuthenticationToken authentication = mock(UsernamePasswordAuthenticationToken.class);
+        User user = new User("staff1", "password1", Collections.emptyList());
+        when(authentication.getPrincipal())
+                .thenReturn(user);
+        Optional<Staff> toReturn = Optional.of(new Staff("staff1", "password1", "Elgin", "Chan", 97882145L, StaffRoleEnum.ADMIN, true));
+        when(staffRepository.findByUsername("staff1"))
+                .thenReturn(toReturn);
+        SecurityContext securityContext = Mockito.mock(SecurityContext.class);
+        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+
+        // Mocking the ward class repository to return a valid WardClass
+        Ward newWard = new Ward();
+        String wardClassName = "Ward 1A";
+        newWard.setName(null);
+        newWard.setLocation("Level 2");
+        newWard.setCapacity(24);
+        WardClass wardClass = new WardClass();
+        wardClass.setWardClassName("Ward 1A");
+        wardClass.setBedsPerRoom(10);
+        when(wardClassRepository.findByWardClassNameContainingIgnoreCase(wardClassName))
+                .thenReturn(Collections.singletonList(wardClass));
+
+        // Performing the test
+        assertThrows(UnableToCreateWardException.class, () -> wardService.createWard(newWard,wardClassName));
+
+        //verify
+        verify(wardRepository, never()).save(newWard);
+    }
+    @Test
+    void testCreateWard_CapacityFailure() {
+        // Mock data
+        UsernamePasswordAuthenticationToken authentication = mock(UsernamePasswordAuthenticationToken.class);
+        User user = new User("staff1", "password1", Collections.emptyList());
+        when(authentication.getPrincipal())
+                .thenReturn(user);
+        Optional<Staff> toReturn = Optional.of(new Staff("staff1", "password1", "Elgin", "Chan", 97882145L, StaffRoleEnum.ADMIN, true));
+        when(staffRepository.findByUsername("staff1"))
+                .thenReturn(toReturn);
+        SecurityContext securityContext = Mockito.mock(SecurityContext.class);
+        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+
+        // Mocking the ward class repository to return a valid WardClass
+        Ward newWard = new Ward();
+        String wardClassName = "Ward 1A";
+        newWard.setName(wardClassName);
+        newWard.setLocation("Level 2");
+        newWard.setCapacity(null);
+        WardClass wardClass = new WardClass();
+        wardClass.setWardClassName("Ward 1A");
+        wardClass.setBedsPerRoom(10);
+        when(wardClassRepository.findByWardClassNameContainingIgnoreCase(wardClassName))
+                .thenReturn(Collections.singletonList(wardClass));
+
+        // Performing the test
+        assertThrows(UnableToCreateWardException.class, () -> wardService.createWard(newWard,wardClassName));
+
+        //verify
+        verify(wardRepository, never()).save(newWard);
+    }
+    @Test
+    void testCreateWard_NullLocation() {
+        // Mock data
+        UsernamePasswordAuthenticationToken authentication = mock(UsernamePasswordAuthenticationToken.class);
+        User user = new User("staff1", "password1", Collections.emptyList());
+        when(authentication.getPrincipal())
+                .thenReturn(user);
+        Optional<Staff> toReturn = Optional.of(new Staff("staff1", "password1", "Elgin", "Chan", 97882145L, StaffRoleEnum.ADMIN, true));
+        when(staffRepository.findByUsername("staff1"))
+                .thenReturn(toReturn);
+        SecurityContext securityContext = Mockito.mock(SecurityContext.class);
+        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+
+        // Mocking the ward class repository to return a valid WardClass
+        Ward newWard = new Ward();
+        String wardClassName = "Ward 1A";
+        newWard.setName(wardClassName);
+        newWard.setLocation(null);
+        newWard.setCapacity(24);
+        WardClass wardClass = new WardClass();
+        wardClass.setWardClassName("Ward 1A");
+        wardClass.setBedsPerRoom(10);
+        when(wardClassRepository.findByWardClassNameContainingIgnoreCase(wardClassName))
+                .thenReturn(Collections.singletonList(wardClass));
+
+        // Performing the test
+        assertThrows(UnableToCreateWardException.class, () -> wardService.createWard(newWard,wardClassName));
+
+        //verify
+        verify(wardRepository, never()).save(newWard);
+    }
+    @Test
+    void testCreateWard_WardClassNotFound() {
+        UsernamePasswordAuthenticationToken authentication = mock(UsernamePasswordAuthenticationToken.class);
+        User user = new User("staff1", "password1", Collections.emptyList());
+        when(authentication.getPrincipal())
+                .thenReturn(user);
+        Optional<Staff> toReturn = Optional.of(new Staff("staff1", "password1", "Elgin", "Chan", 97882145L, StaffRoleEnum.ADMIN, true));
+        when(staffRepository.findByUsername("staff1"))
+                .thenReturn(toReturn);
+        SecurityContext securityContext = Mockito.mock(SecurityContext.class);
+        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
+        SecurityContextHolder.setContext(securityContext);
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+
+        Ward newWard = new Ward();
+        String wardClassName = "Ward 1A";
+        newWard.setName(wardClassName);
+        newWard.setLocation(null);
+        newWard.setCapacity(24);
+
+        when(wardClassRepository.findByWardClassNameContainingIgnoreCase(wardClassName))
+                .thenReturn(Collections.emptyList());
 
         // Performing the test
         assertThrows(UnableToCreateWardException.class, () -> wardService.createWard(newWard, wardClassName));
+        verify(wardRepository, never()).save(newWard);
+
     }
 
     @Test
@@ -174,32 +303,14 @@ class WardServiceTests {
 
         List<Ward> result = wardService.getAllWardsByName(wardName);
 
-        assertEquals(wardList, result);
-    }
+        assertEquals(1, result.size());
+        verify(wardRepository, times(1)).findByNameContainingIgnoreCase(wardName);
 
-    @Test
-    void testGetAllWardsByName_NoWardsFound() {
-        // Mock data
-        String wardName = "NonExistentWard";
-        when(wardRepository.findByNameContainingIgnoreCase(wardName)).thenReturn(new ArrayList<>());
-
-        // Test
-        assertThrows(DepartmentNotFoundException.class, () -> wardService.getAllWardsByName(wardName));
-    }
-
-    @Test
-    void testGetAllWardsByName_EmptyName() {
-        // Mock data
-        String wardName = "";
-        when(wardRepository.findByNameContainingIgnoreCase(wardName)).thenReturn(new ArrayList<>());
-
-        // Test
-        assertThrows(DepartmentNotFoundException.class, () -> wardService.getAllWardsByName(wardName));
     }
 
     @Test
     void testGetAllWardsByWardClass() {
-        String wardClassName = "A";
+        String wardClassName = "B2";
         WardClass wardClass = new WardClass();
         wardClass.setWardClassName(wardClassName);
         List<Ward> wardList = new ArrayList<>();
@@ -210,37 +321,10 @@ class WardServiceTests {
 
         List<Ward> result = wardService.getAllWardsByWardClass(wardClassName);
 
-        assertEquals(wardList, result);
-    }
+        assertEquals(1, result.size());
 
-    @Test
-    void testGetAllWardsByWardClass_NoWardsFound() {
-        // Mock data
-        String wardClassName = "NonExistentWardClass";
-        when(wardClassRepository.findByWardClassNameContainingIgnoreCase(wardClassName))
-                .thenReturn(new ArrayList<>());
-
-        // Test
-        List<Ward> result = wardService.getAllWardsByWardClass(wardClassName);
-
-        // Verify
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void testGetAllWardsByWardClass_EmptyClassName() {
-        // Mock data
-        String wardClassName = "";
-        when(wardClassRepository.findByWardClassNameContainingIgnoreCase(wardClassName))
-                .thenReturn(new ArrayList<>());
-
-        // Test
-        List<Ward> result = wardService.getAllWardsByWardClass(wardClassName);
-
-        // Verify
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
+        verify(wardClassRepository,times(1)).findByWardClassNameContainingIgnoreCase(wardClassName);
+        verify(wardRepository,times(1)).findByWardClass(wardClass);
     }
 
 
